Ajustes no makefile, bib e cores

--- a/trunk/latex/ods.bib
+++ b/trunk/latex/ods.bib
@@ -623,7 +623,7 @@ publisher={G. Kempensem},
   author    = {E. Lehman and F. T. Leighton and A. R. Meyer},
   title     = {Mathematics for Computer Science},
   year      = {2011},
-  url       = {http://courses.csail.mit.edu/6.042/spring12/mcs.pdf},
+  url       = {http://people.csail.mit.edu/meyer/mcs.pdf},
   lastchecked= {2012-09-06}
 }
 
