Cap Grafos traduzido e mudança de nome de sorting

--- a/trunk/latex/ods-ptbr.tex
+++ b/trunk/latex/ods-ptbr.tex
@@ -282,8 +282,8 @@ Edição 0.1G \cpponly{$\beta$}\pcodeonly{$\beta$}
 \include{scapegoat-ptbr-lang}
 \include{redblack-ptbr-lang}
 \include{heaps-ptbr-lang}
-\include{sorting-lang}
-\include{graphs-lang}
+\include{sorting-ptbr-lang}
+\include{graphs-ptbr-lang}
 \include{integers-lang}
 \include{btree-lang}
 
