Cap Estruturas para inteiros traduzido

--- a/trunk/latex/ods-ptbr.tex
+++ b/trunk/latex/ods-ptbr.tex
@@ -284,8 +284,8 @@ Edição 0.1G \cpponly{$\beta$}\pcodeonly{$\beta$}
 \include{heaps-ptbr-lang}
 \include{sorting-ptbr-lang}
 \include{graphs-ptbr-lang}
-\include{integers-lang}
-\include{btree-lang}
+\include{integers-ptbr-lang}
+\include{btree-ptbr-lang}
 
 %% Turn off section numbers for remainder of document
 \fancyhead[RO]{} % section number on the outside
